fixed issue with comma not showing on tag links

--- a/htdocs/themes/theme3/css/custom-style.css
+++ b/htdocs/themes/theme3/css/custom-style.css
@@ -19,10 +19,10 @@
     margin-right: 4px;
 }
 span.keyword_link::after {
-    content: &#34;,&#34;;
+    content: ',';
 }
 span.keyword_link:last-child::after {
-    content: &#34;&#34;;
+    content: '';
 }
 div.keyword_results_title {
     margin: 0 0 36px 15px;
